2004-05-04  Pawel Rozanski  <tokugawa@afn.no-ip.org>

	* NemerleBindingExecutionServices.cs: use xterm to run project

2004-04-28  Todd Berman  <tberman@sevenl.net>

	* NemerleLanguageBinding.cs: stubbing GenerateMakefile

2004-04-28  Pawel Rozanski  <tokugawa@afn.no-ip.org>

	* Gui/OutputPanel.cs:
	* Gui/CodeGenerationPanel.cs:
	* NemerleBindingCompilerServices.cs:
	* Project/NemerleParameters.cs:
	* Project/NemerleProject.cs:
	* NemerleBindingExecutionServices.cs:
	NemerleParameters uses more from inherited AbstractProjectConfiguration
	class

2004-04-16  Pawel Rozanski <tokugawa@afn.no-ip.org>

	* NemerleBindingCompilerServices.cs: without temp files now,
	Process.StandardOutput based interface

2004-04-14  Pawel Rozanski <tokugawa@afn.no-ip.org>

	* NemerleBindingCompilerServices.cs: uses the StatusBarService

2004-04-13  Pawel Rozanski <tokugawa@afn.no-ip.org>

	stripped DOS '\r' from newlines