@@ -1,3 +1,7 @@
+2004-05-20  Pawel Rozanski  <tokugawa@afn.no-ip.org>
+
+	* NemerleBindingCompilerServices.cs: updated ncc output parser.
+
 2004-05-04  Pawel Rozanski  <tokugawa@afn.no-ip.org>
 
 	* NemerleBindingExecutionServices.cs: use xterm to run project
